update file structer category-topic-lesson